--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,18 +38,12 @@ jobs:
         run: |
           export version=$(echo ${{ steps.latest.outputs.name }} | sed 's/^v//')
           echo ::set-output name=name::$version
-      - name: Update Version in Files (1)
+      - name: Update Version in Files
         if: ${{ contains(steps.latest.outputs.name, '.') }}
         uses: datamonsters/replace-action@v2
         with:
           files: 'blog/config.py'
-          replacements: '${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}'
-      - name: Update Version in Files (2)
-        if: ${{ contains(steps.latest.outputs.name, '.') }}
-        uses: datamonsters/replace-action@v2
-        with:
-          files: 'web/app/package.json'
-          replacements: '${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}'
+          replacements: "${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}"
       - name: File Save Delay
         uses: jakejarvis/wait-action@master
         with:
