--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,12 +64,12 @@ jobs:
         run: |
           python -m blog.generate
           cd dist
-          zip -r ../dist.zip *
+          zip -r ../blog-v${{ steps.version.outputs.value }}.zip *
       - name: Create Release
         uses: ncipollo/release-action@v1.12.0
         with:
           allowUpdates: true
-          artifacts: dist.zip
+          artifacts: blog-v${{ steps.version.outputs.value }}.zip
           draft: false
           makeLatest: true
           tag: v${{ steps.version.outputs.value }}
