--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload static assets
         run: |
           cd static
-          aws s3 sync * s3://jamiehurst-blog-static/
+          aws s3 sync . s3://jamiehurst-blog-static/
       - name: Get current live colour
         id: live_colour
         run: |
