Improve nginx by using rewrite instead of redirect

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -27,23 +27,14 @@ http {
     server {
         listen       80;
         server_name  localhost;
-
-        if ($request_uri ~ \?page=1) {
-            return 301 $scheme://$http_host/;
-        }
+        root   /usr/share/nginx/html;
 
         if ($request_uri ~ \?page=(.*)) {
-            return 301 $scheme://$http_host/index-$1;
+            rewrite .* /index-$arg_page.html;
         }
 
-        location ~ \.html {
-            root   /usr/share/nginx/html;
-        }
-
-        location / {
-            root   /usr/share/nginx/html;
-
-            try_files $uri $uri.html /index.html;
+        if ($request_uri ~ ^/([\w\-]+)$) {
+            rewrite .* $request_uri.html;
         }
     }
 }
