--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,8 +58,7 @@ jobs:
           python-version: '3.12'
       - name: Install Dependencies
         run: |
-          python -m pip install setuptools
-          python setup.py develop
+          python -m pip install -r requirements.txt
       - name: Generate Distribution
         run: |
           python -m blog.generate
