--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,8 +32,7 @@ jobs:
           python-version: '3.12'
       - name: Install Dependencies
         run: |
-          python -m pip install setuptools pylint pytest requests-mock coverage
-          python setup.py develop
+          python -m pip install -r requirements.txt
       - name: Test
         run: |
           coverage run -m pytest --verbose --junit-xml tests.xml
