--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - '*.py'
+      - '*.md'
+      - 'articles/**'
+      - 'blog/**'
+      - 'docker/**'
+      - 'tests/**'
+      - 'requirements.txt'
 
 permissions:
   contents: write
