--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,8 +62,9 @@ jobs:
           port: 22
           script: |
             cd /srv
-            unzip blog-${{ steps.version.outputs.value }}.zip -o -d blog-${{ steps.version.outputs.value }}/
+            unzip blog-${{ steps.version.outputs.value }}.zip -d blog-${{ steps.version.outputs.value }}/
             rm blog
+            rm blog-*.zip
             ln -s blog-${{ steps.version.outputs.value }} blog
             service nginx reload
       - name: Update deployment status (success)
