--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         if: ${{ contains(steps.latest.outputs.name, '.') }}
         uses: datamonsters/replace-action@v2
         with:
-          files: 'blog/config.py'
+          files: 'blog/config.py,setup.cfg'
           replacements: "${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}"
       - name: File Save Delay
         uses: jakejarvis/wait-action@master
