--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
       - '!main'
   pull_request: {}
 
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  
 permissions:
   contents: read
   issues: read
