--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 astroid==3.3.6
-certifi==2024.8.30
-charset-normalizer==3.4.0
 coverage==7.6.9
 dill==0.3.9
-idna==3.10
 iniconfig==2.0.0
 isort==5.13.2
 Jinja2==3.1.4
@@ -15,9 +12,7 @@ platformdirs==4.3.6
 pluggy==1.5.0
 pylint==3.3.2
 pytest==8.3.4
-requests==2.32.3
-requests-mock==1.12.1
+setuptools==75.6.0
 tomlkit==0.13.2
-urllib3==2.2.3
 watchdog==6.0.0
 when-changed==0.3.0
