--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,20 +52,15 @@ jobs:
           files: |
             tests.xml
       - name: Publish Code Coverage
-        uses: irongut/CodeCoverageSummary@v1.3.0
+        uses: insightsengineering/coverage-action@v2
         with:
-          filename: coverage.xml
-          badge: false
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: '80 90'
-      - name: Add Coverage PR Comment
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: always()
-        with:
-          recreate: true
-          path: code-coverage-results.md
+          path: coverage.xml
+          fail: true
+          publish: true
+          threshold: 80
+      # - name: Add Coverage PR Comment
+      #   uses: marocchino/sticky-pull-request-comment@v2
+      #   if: always()
+      #   with:
+      #     recreate: true
+      #     path: code-coverage-results.md
