Try a different coverage action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
           path: coverage.xml
           fail: true
           publish: true
+          diff: false
           threshold: 80
       # - name: Add Coverage PR Comment
       #   uses: marocchino/sticky-pull-request-comment@v2
