--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
       - 'docker/**'
       - 'tests/**'
       - 'requirements.txt'
+      - 'setup.cfg'
 
 permissions:
   contents: write
@@ -46,11 +47,17 @@ jobs:
         run: |
           export version=$(echo ${{ steps.latest.outputs.name }} | sed 's/^v//')
           echo ::set-output name=name::$version
-      - name: Update Version in Files
+      - name: Update Version in blog/config.py
         if: ${{ contains(steps.latest.outputs.name, '.') }}
         uses: datamonsters/replace-action@v2
         with:
-          files: 'blog/config.py,setup.cfg'
+          files: 'blog/config.py'
+          replacements: "${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}"
+      - name: Update Version in setup.cfg
+        if: ${{ contains(steps.latest.outputs.name, '.') }}
+        uses: datamonsters/replace-action@v2
+        with:
+          files: 'setup.cfg'
           replacements: "${{ steps.latest_clean.outputs.name }}=${{ steps.version.outputs.value }}"
       - name: File Save Delay
         uses: jakejarvis/wait-action@master
